Added some badges
Signed-off-by: Jaid <jaid.jsx@gmail.com>

--- a/src/template.hbs
+++ b/src/template.hbs
@@ -8,6 +8,8 @@ logo
 {{{description}}}
 {{/if}}
 
+{{{shield "license" slug}}} {{{shield "commitsSince" slug tag}}} {{{shield "lastCommit" slug}}} {{{shield "issues" slug}}}
+
 {{#if installationCommands.length}}
 ## Installation
 {{#each installationCommands}}
