--- a/src/template.hbs
+++ b/src/template.hbs
@@ -57,6 +57,17 @@ typeof {{globalName}}.default
 {{/if}}
 
 {{{apiMarkdown}}}
+{{#if binName}}
+## CLI Usage
+After installing package `{{{pkg.name}}}` globally, you can use its command line interface.
+```bash
+{{{binExample}}}
+```
+For usage instructions:
+```bash
+{{{binName}}} --help
+```
+{{/if}}
 
 {{#if license}}
 ## License
