feat: Added condition for npm badge row
Signed-off-by: Jaid <jaid.jsx@gmail.com>

--- a/src/template.hbs
+++ b/src/template.hbs
@@ -10,7 +10,9 @@ logo
 
 {{{shield "license" slug}}}  
 {{{shield "commitsSince" slug tag}}} {{{shield "lastCommit" slug}}} {{{shield "issues" slug}}}  
+{{#if installationCommands.length}}
 {{{shield "npmLatest" pkg.name}}} {{{shield "dependents" pkg.name slug}}} {{{shield "npmDownloads" pkg.name}}}
+{{/if}}
 
 {{#if installationCommands.length}}
 ## Installation
