feat: Added support for defined markdown fragments
Signed-off-by: Jaid <jaid.jsx@gmail.com>

--- a/src/template.hbs
+++ b/src/template.hbs
@@ -14,6 +14,14 @@ logo
 {{{shield "npmLatest" pkg.name}}} {{{shield "dependents" pkg.name slug}}} {{{shield "npmDownloads" pkg.name}}}
 {{/if}}
 
+{{{fragments.warning}}}
+
+{{{fragments.example}}}
+
+{{{fragments.usage}}}
+
+{{{fragments.advancedUsage}}}
+
 {{#if installationCommands.length}}
 ## Installation
 {{#each installationCommands}}
@@ -70,6 +78,10 @@ For usage instructions:
 {{{binName}}} --help
 ```
 {{/if}}
+
+{{{fragments.legal}}}
+
+{{{fragments.development}}}
 
 {{#if license}}
 ## License
