feat: Added config entry `githubActions` (automatically set)
Signed-off-by: Jaid <jaid.jsx@gmail.com>

--- a/src/template.hbs
+++ b/src/template.hbs
@@ -8,7 +8,7 @@ logo
 {{{description}}}
 {{/if}}
 
-{{{shield "actions" slug}}} {{{shield "license" slug}}}  
+{{#if config.githubActions}}{{{shield "actions" slug}}}{{/if}} {{{shield "license" slug}}}  
 {{{shield "commitsSince" slug tag}}} {{{shield "lastCommit" slug}}} {{{shield "issues" slug}}}  
 {{#if installationCommands.length}}
 {{{shield "npmLatest" pkg.name}}} {{{shield "dependents" pkg.name slug}}} {{{shield "npmDownloads" pkg.name}}}
