improve: Improved description style
Signed-off-by: Jaid <jaid.jsx@gmail.com>

--- a/src/template.hbs
+++ b/src/template.hbs
@@ -11,9 +11,10 @@ logo
 {{/if}}
 
 {{#if description}}
-{{{description}}}
+*{{{description}}}*
 {{/if}}
 
+{{{fragments.description}}}
 {{{fragments.warning}}}
 
 {{{fragments.example}}}
