--- a/src/template.hbs
+++ b/src/template.hbs
@@ -17,7 +17,7 @@ logo
 {{#if config.personal}}
 #### Opinionated
 
-This project is tailored to my personal needs and workflows and therefore highly opinionated. Feel free to use it or get inspired by it, but please do not get frustrated if you come across weird features or have difficulties integrating it to in your own ecosystem.
+This project is tailored to my personal needs and workflows and therefore highly opinionated. Feel free to use it or get inspired by it, but please do not get frustrated if you come across weird features or have difficulties integrating it in your own ecosystem.
 {{/if}}
 
 {{{fragments.description}}}
