feat: Added automatic generated development section
Signed-off-by: Jaid <jaid.jsx@gmail.com>

--- a/src/template.hbs
+++ b/src/template.hbs
@@ -89,7 +89,19 @@ For usage instructions:
 
 {{{fragments.legal}}}
 
+{{#if hasDevelopmentSection}}
+## Development
+
 {{{fragments.development}}}
+
+{{#each developmentScripts}}
+{{{name}}}
+```bash
+{{{script}}}
+```
+{{/each}}
+
+{{/if}}
 
 {{#if license}}
 ## License
