feat: Added config entry `environmentVariables`
Signed-off-by: Jaid <jaid.jsx@gmail.com>

--- a/src/template.hbs
+++ b/src/template.hbs
@@ -87,6 +87,15 @@ For usage instructions:
 ```
 {{/if}}
 
+{{#if hasEnvironmentVariables}}
+Following environment variables are read by {{{title}}}:
+Name|Description
+---|---
+{{#each config.environmentVariables}}
+{{{@key}}}|{{{this}}}
+{{/each}}
+{{/if}}
+
 {{{fragments.legal}}}
 
 {{#if hasDevelopmentSection}}
