--- a/src/template.hbs
+++ b/src/template.hbs
@@ -30,6 +30,8 @@ This project is tailored to my personal needs and workflows and therefore highly
 
 {{{fragments.advancedUsage}}}
 
+{{{fragments.options}}}
+
 {{#if installationCommands.length}}
 ## Installation
 {{#each installationCommands}}
