--- a/src/template.hbs
+++ b/src/template.hbs
@@ -4,8 +4,8 @@
 logo
 {{/if}}
 
-{{#if config.githubActions}}{{{shield "actions" slug}}}{{/if}} {{{shield "license" slug}}}  
-{{{shield "commitsSince" slug tag}}} {{{shield "lastCommit" slug}}} {{{shield "issues" slug}}}  
+{{{shield "license" slug}}}  
+{{#if config.githubActions}}{{{shield "actions" slug}}}{{/if}} {{{shield "commitsSince" slug tag}}} {{{shield "lastCommit" slug}}} {{{shield "issues" slug}}}  
 {{#if installationCommands.length}}
 {{{shield "npmLatest" pkg.name}}} {{{shield "dependents" pkg.name slug}}} {{{shield "npmDownloads" pkg.name}}}
 {{/if}}
