feat: Added missing header for env vars
Signed-off-by: Jaid <jaid.jsx@gmail.com>

--- a/src/template.hbs
+++ b/src/template.hbs
@@ -90,6 +90,8 @@ For usage instructions:
 {{/if}}
 
 {{#if hasEnvironmentVariables}}
+## Environment Variables
+
 Following environment variables are read by {{{title}}}:
 
 Name|Description
