feat: Added config entries `link` and `linkName`
Signed-off-by: Jaid <jaid.jsx@gmail.com>

--- a/src/template.hbs
+++ b/src/template.hbs
@@ -22,6 +22,10 @@ This project is tailored to my personal needs and workflows and therefore highly
 
 {{{fragments.description}}}
 
+{{#if config.link}}
+##### View online at [{{{config.linkName}}}]({{{config.link}}}).
+{{/if}}
+
 {{{fragments.warning}}}
 
 {{{fragments.example}}}
