fix: Fixed align
Signed-off-by: Jaid <jaid.jsx@gmail.com>

--- a/src/template.hbs
+++ b/src/template.hbs
@@ -29,7 +29,9 @@ This project is tailored to my personal needs and workflows and therefore highly
 {{#if installationCommands.length}}
 ## Installation
 {{#each installationCommands}}
-{{{shield header headerArgument}}}{{#if bonusText}} {{{bonusText}}}{{/if}}
+
+{{{shield header headerArgument}}}{{#if bonusText}} <span style="vertical-align: top">{{{bonusText}}}</span>{{/if}}
+
 ```bash
 {{command}}
 ```
