improve: Changed layout of GitHub Packages installing instruction
Signed-off-by: Jaid <jaid.jsx@gmail.com>

--- a/src/template.hbs
+++ b/src/template.hbs
@@ -30,7 +30,8 @@ This project is tailored to my personal needs and workflows and therefore highly
 ## Installation
 {{#each installationCommands}}
 
-{{{shield header headerArgument}}}{{#if bonusText}} <span style="vertical-align: top">{{{bonusText}}}</span>{{/if}}
+{{{shield header headerArgument}}}{{#if bonusText}}  
+{{{bonusText}}}{{/if}}
 
 ```bash
 {{command}}
