improve: Improved license representation for MIT licenses
Signed-off-by: Jaid <jaid.jsx@gmail.com>

--- a/src/template.hbs
+++ b/src/template.hbs
@@ -136,7 +136,12 @@ Name|Description
 
 {{#if license}}
 ## License
+{{#if isMitLicense}}
+[MIT License](https://raw.githubusercontent.com/{{{slug}}}/master/license.txt)  
+{{{license}}}
+{{else}}
 ```text
 {{{license}}}
 ```
+{{/if}}
 {{/if}}
