fix: Fixed MIT license markdown
Signed-off-by: Jaid <jaid.jsx@gmail.com>

--- a/src/template.hbs
+++ b/src/template.hbs
@@ -138,7 +138,7 @@ Name|Description
 ## License
 {{#if isMitLicense}}
 [MIT License](https://raw.githubusercontent.com/{{{slug}}}/master/license.txt)  
-{{{license}}}
+{{{escapeMarkdown license}}}
 {{else}}
 ```text
 {{{license}}}
