--- a/src/template.hbs
+++ b/src/template.hbs
@@ -58,7 +58,7 @@ This project is tailored to my personal needs and workflows and therefore highly
 {{/if}}
 
 {{#each exampleResults}}
-{{#if config.exampleResultMayVary}}
+{{#if ../config.exampleResultMayVary}}
 Variable `{{{@key}}}` will be something like:
 {{else}}
 Variable `{{{@key}}}` will be:
