feat: Added option `renderComment`
Signed-off-by: Jaid <jaid.jsx@gmail.com>

--- a/src/template.hbs
+++ b/src/template.hbs
@@ -199,3 +199,10 @@ Name|Description
 ```
 {{/if}}
 {{/if}}
+
+{{#if config.renderComment}}
+<!---
+Readme generated with tldw v{{tldwVersion}}
+https://github.com/Jaid/tldw
+-->
+{{/if}}
