improve: Put Development section into a collapsed container
Signed-off-by: Jaid <jaid.jsx@gmail.com>

--- a/src/template.hbs
+++ b/src/template.hbs
@@ -177,6 +177,9 @@ Name|Description
 {{#if hasDevelopmentSection}}
 ## Development
 
+<details>
+<summary><b>Development hints for maintaining and improving {{{title}}}</b></summary>
+
 {{{fragments.development}}}
 
 {{#each developmentScripts}}
@@ -186,6 +189,7 @@ Name|Description
 ```
 {{/each}}
 
+</details>
 {{/if}}
 
 {{#if license}}
