feat: Added “Pure ESM library” section
Signed-off-by: Jaid <jaid.jsx@gmail.com>

--- a/src/template.hbs
+++ b/src/template.hbs
@@ -19,6 +19,11 @@ logo
 
 :warning: This project is tailored to my personal needs and workflows and therefore highly opinionated. Feel free to use it or get inspired by it, but please do not get frustrated if you come across weird features or difficulties integrating it in your own ecosystem.
 {{/if}}
+
+{{#if esmWarning}}
+#### Pure ESM library
+
+:information_source: This package has only ESM exports. You should `import` it from MJS files or [read more here](https://gist.github.com/sindresorhus/a39789f98801d908bbc7ff3ecc99d99c).
 {{/if}}
 
 {{{fragments.description}}}
